<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/cl_layout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/ui_film_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/AppTheme"/>

    <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ui_film_detail_toolbar">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".activities.NovelaDetalhesActivity"
                tools:showIn="@layout/activity_film_detail">

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/label_empty"
                    android:textSize="30sp"
                    android:lines="1"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/iv_people"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" android:gravity="center"/>

            <ImageView
                    android:id="@+id/iv_people"
                    android:layout_width="171dp"
                    android:layout_height="224dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.039"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_4"/>

            <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_empty"
                    android:textSize="14sp"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintStart_toEndOf="@+id/iv_people" android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            <TextView
                    android:id="@+id/tv_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_empty"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="@+id/tv_release_date" android:layout_marginEnd="8dp"/>

            <TextView
                    android:id="@+id/tv_producer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_empty"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_release_date"
                    app:layout_constraintEnd_toEndOf="@+id/tv_release_date"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"/>

            <TextView
                    android:id="@+id/tv_opening_crawl"
                    android:layout_width="0dp"
                    android:layout_height="292dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="20dp"
                    android:text="@string/label_empty"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="@+id/iv_people"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"/>
            <TextView
                    android:text="@string/label_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    app:layout_constraintStart_toEndOf="@+id/iv_people" android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"/>
            <TextView
                    android:text="@string/label_director"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="@+id/tv_release_date"
                    app:layout_constraintStart_toStartOf="@+id/tv_release_date"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_date"/>
            <TextView
                    android:text="@string/label_producer_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/textView5"
                    android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/tv_director"
                    app:layout_constraintStart_toStartOf="@+id/tv_director"/>
            <TextView
                    android:text="@string/label_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/tv_director"
                    android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/tv_producer"/>
            <TextView
                    android:text="@string/label_empty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/tv_episode" app:layout_constraintEnd_toEndOf="@+id/tv_producer"
                    app:layout_constraintStart_toStartOf="@+id/tv_producer"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"/>
            <TextView
                    android:text="@string/label_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:id="@+id/textView8" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_people" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.03"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>