<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:id="@+id/cv_proximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:elevation="4dp"
            app:cardCornerRadius="4dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_view_shape">

                <ImageView
                        android:id="@+id/iv_people"
                        android:layout_width="105dp"
                        android:layout_height="140dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/no_image"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv_title"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/label_empty"
                            android:textColor="#000"
                            android:textSize="20sp"/>

                    <TextView
                            android:id="@+id/tv_title_episode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@string/label_empty"
                            android:textColor="#000"
                            android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_movie_creation_black_24dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="4dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="2dp"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:text="@string/label_director"
                                android:textColor="@color/gray"
                                android:textSize="14sp"/>

                        <TextView
                                android:id="@+id/tv_director"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="8dp"
                                android:layout_marginTop="2dp"
                                android:gravity="center"
                                android:text="@string/label_empty"
                                android:textColor="@color/gray"
                                android:textSize="14sp"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                   <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="8dp"
                           android:orientation="horizontal">

                       <ImageView
                               android:layout_width="wrap_content"
                               android:layout_height="match_parent"
                               android:src="@drawable/ic_event_note_black_24dp"/>

                       <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="match_parent"
                               android:layout_marginEnd="4dp"
                               android:layout_marginStart="8dp"
                               android:layout_marginTop="2dp"
                               android:gravity="center"
                               android:textStyle="bold"
                               android:text="@string/label_release_year"
                               android:textColor="@color/gray"
                               android:textSize="14sp"/>

                       <TextView
                               android:id="@+id/tv_launch_year"
                               android:layout_width="wrap_content"
                               android:layout_height="match_parent"
                               android:layout_marginEnd="8dp"
                               android:layout_marginTop="2dp"
                               android:gravity="center"
                               android:text="@string/label_empty"
                               android:textColor="@color/gray"
                               android:textSize="14sp"/>
                   </LinearLayout>
                </LinearLayout>
            </LinearLayout>






        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>